--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "@next/font": "^13.0.6",
-    "countdown": "^2.6.0",
     "date-fns": "^2.29.3",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
-    "next": "13.0.6",
-    "react": "18.2.0",
+    "eslint-config-next": "^13.1.1",
+    "next": "^13.1.1",
+    "react": "^18.2.0",
     "react-countdown": "^2.3.5",
-    "react-dom": "18.2.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "sass": "^1.56.1"
